# Phi-WebHook-Server

./: Cargo.toml  README.md  wrangler.toml
pws_core/: Cargo.toml
pws_core/src/: lib.rs  middleware.rs  types.rs  utils.rs
pws_core/src/routes/: mod.rs
pws_core/src/routes/info/: all.rs  curated.rs  mod.rs  utils.rs
pws_core/src/routes/webhook/: mod.rs  save.rs  user.rs
pws_server/: Cargo.toml
pws_server/src/: kv.rs  main.rs  types.rs  utils.rs
pws_worker/: Cargo.toml  README.md
pws_worker/src/: kv.rs  lib.rs  sign.rs  utils.rs
resources/: config.json
