[package]
name = "pws_core"
version = "0.1.0"
edition = "2024"
authors = ["Shua <CHA_shua@outlook.com>"]

[lib]
crate-type = ["cdylib" , "rlib"]

[dependencies]
async-trait = "0.1.89"
axum = { version = "0.8", default-features = false, features = ["json"] }
phi_save_codec = "0.1.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.147"
bitvec = "1.0.1"
zip = { version = "7.0.0", default-features = false, features = ["deflate"] }
aes = "0.8.4"
cbc = "0.1.2"
block-padding = "0.4.2"
shua_struct = "0.1.0"
