[package]
name = "pws_worker"
version = "0.1.0"
edition = "2024"
authors = ["Shua-github <CHA_shua@outlook.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.7", features = ['http', 'axum'] }
worker-macros = { version = "0.7", features = ['http'] }
axum = { version = "0.8", default-features = false }
tower-service = "0.3.3"
pws_core = { path = "../pws_core" }
async-trait = "0.1"
blake2 = "0.10.6"
base64 = "0.22.1"
serde = { version = "1", features = ["derive"] }